fixing layout issues

--- a/src/css/cursos.css
+++ b/src/css/cursos.css
@@ -1,5 +1,5 @@
 :root {
-    --blue: #0e38de;
+    --blue: #92A7F7;
     --violet: #C63BFA;
     --white: #ffffff;
     --background-color: #310e3d;
